tests/baselines/reference/contextuallyTypingOrOperator3.errors.txt
==== tests/cases/compiler/contextuallyTypingOrOperator3.ts (1 errors) ====
    function foo<T, U extends T>(u: U) {
                    ~~~~~~~~~~~
!!! contextuallyTypingOrOperator3.ts(1,17): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        var x3: U = u || u;
    }